--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href=".favicon-32x32.png">
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
   <link rel="stylesheet" href="css/styles.css">
@@ -26,15 +26,15 @@
 
   <img class="backgroundimage" src="images/bg-desktop.svg" alt="background image">
 
-  <img class="icons" src="images/illustration-mockups.svg" alt="icon">
-  <img class="logo" src="images/logo.svg" alt="logo">
+  <img class="icons" src="illustration-mockups.svg" alt="icon">
+  <img class="logo" src="logo.svg" alt="logo">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <div class="bottom-section">
-    <img class="facebook" src="images/facebook.webp" alt="Facebook-logo">
-    <img class="twitter" src="images/twitter.webp" alt="Twitter-logo">
+    <img class="facebook" src="facebook.webp" alt="Facebook-logo">
+    <img class="twitter" src="twitter.webp" alt="Twitter-logo">
   </div>
 
   <footer>
