--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href=".favicon-32x32.png">
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 
 </head>
