--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
 
-  <img class="backgroundimage" src="images/bg-desktop.svg" alt="background image">
+  <img class="backgroundimage" src="bg-desktop.svg" alt="background image">
 
   <img class="icons" src="illustration-mockups.svg" alt="icon">
   <img class="logo" src="logo.svg" alt="logo">
